--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <body>
     <header>
-        <a href="./index.html" class="logotipe"><span class="logotipe-unic">Web</span>Studio</a>
         <nav>
+            <a href="./index.html" class="logotipe">Web<span class="logotipe-unic">Studio</span></a>
             <ul>
                 <li class="nav-li">Studio</li>
                 <li class="nav-li">Portfolio</li>
