--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html" class="logotipe">Web<span class="logotipe-unic">Studio</span></a>
             <ul>
+                <li class="nav-li"><a href="./index.html" class="logotipe">Web<span
+                            class="logotipe-unic">Studio</span></a></li>
                 <li class="nav-li">Studio</li>
                 <li class="nav-li">Portfolio</li>
                 <li class="nav-li">Contacts</li>
             </ul>
         </nav>
-        <address>
-            <ul>
+        <address class="address-header">
+            <ul class="address-list">
                 <li class="address-li">
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
