--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
 <body>
     <header>
         <nav>
+            <a href="./index.html" class="logotipe">Web<span class="logotipe-unic">Studio</span></a>
             <ul>
-                <li class="nav-li"><a href="./index.html" class="logotipe">Web<span
-                            class="logotipe-unic">Studio</span></a></li>
-                <li class="nav-li">Studio</li>
-                <li class="nav-li">Portfolio</li>
-                <li class="nav-li">Contacts</li>
+                <li class="nav-li"><a href="./index.html">Studio</a></li>
+                <li class="nav-li"><a href="">Portfolio</a></li>
+                <li class="nav-li"><a href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="address-header">
