--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
         <nav>
             <a href="./index.html" class="logotipe">Web<span class="logotipe-unic">Studio</span></a>
             <ul>
-                <li class="nav-li"><a href="./index.html">Studio</a></li>
-                <li class="nav-li"><a href="">Portfolio</a></li>
-                <li class="nav-li"><a href="">Contacts</a></li>
+                <li class="nav-li"><a class="nav-link" href="./index.html">Studio</a></li>
+                <li class="nav-li"><a class="nav-link" href="">Portfolio</a></li>
+                <li class="nav-li"><a class="nav-link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="address-header">
             <ul class="address-list">
                 <li class="address-li">
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li class="address-li">
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
@@ -43,88 +43,91 @@
             <button type="button" class="button-order">Order Service</button>
         </section>
         <section>
-            <h2>Section 2</h2>
+            <h2 class="section-title">Section 2</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
+                    <p class="text-main">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
                     <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <p class="text-main">Bring the key message to the brand's audience for the best price within the
+                        shortest possible
                         time.</p>
                 </li>
                 <li>
                     <h3>Diligence</h3>
-                    <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.
+                    <p class="text-main">Research and confirm brands with the strongest digital growth opportunities and
+                        minimize risk.
                     </p>
                 </li>
                 <li>
                     <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <p class="text-main">Design practice focused on digital experiences. We bring forth a deep passion
+                        for
                         problem-solving.
                     </p>
                 </li>
             </ul>
         </section>
         <section class="team">
-            <h2>Our Team</h2>
+            <h2 class="section-title">Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/img-team-1.jpg" alt="Mark Guerrero" width="264">
                     <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <p class="text-main">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/img-team-2.jpg" alt="Tom Ford" width="264">
                     <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <p class="text-main">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/img-team-3.jpg" alt="Camila Garcia" width="264">
                     <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <p class="text-main">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img-team-4.jpg" alt="Daniel Wilson" width="264">
                     <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <p class="text-main">UI Designer</p>
                 </li>
             </ul>
         </section>
         <section>
-            <h2>Our Portfolio</h2>
+            <h2 class="section-title">Our Portfolio</h2>
             <ul>
                 <li>
                     <img src="./images/portfolio-1.jpg" alt="Banking App" width="360">
                     <h3>Banking App</h3>
-                    <p>App</p>
+                    <p class="text-main">App</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-2.jpg" alt="Cashless Payment" width="360">
                     <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <p class="text-main">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-3.jpg" alt="Meditation App" width="360">
                     <h3>Meditation App</h3>
-                    <p>App</p>
+                    <p class="text-main">App</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-4.jpg" alt="" width="360">
                     <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <p class="text-main">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-5.jpg" alt="" width="360">
                     <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <p class="text-main">Design</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-6.jpg" alt="" width="360">
                     <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <p class="text-main">Marketing</p>
                 </li>
             </ul>
         </section>
