--- a/index.html
+++ b/index.html
@@ -46,24 +46,24 @@
             <h2 class="section-title">Section 2</h2>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
+                    <h3 class="subtitle">Strategy</h3>
                     <p class="text-main">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
+                    <h3 class="subtitle">Punctuality</h3>
                     <p class="text-main">Bring the key message to the brand's audience for the best price within the
                         shortest possible
                         time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
+                    <h3 class="subtitle">Diligence</h3>
                     <p class="text-main">Research and confirm brands with the strongest digital growth opportunities and
                         minimize risk.
                     </p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
+                    <h3 class="subtitle">Technologies</h3>
                     <p class="text-main">Design practice focused on digital experiences. We bring forth a deep passion
                         for
                         problem-solving.
@@ -74,24 +74,24 @@
         <section class="team">
             <h2 class="section-title">Our Team</h2>
             <ul>
-                <li>
+                <li class="team-card">
                     <img src="./images/img-team-1.jpg" alt="Mark Guerrero" width="264">
-                    <h3>Mark Guerrero</h3>
+                    <h3 class="subtitle">Mark Guerrero</h3>
                     <p class="text-main">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-card">
                     <img src="./images/img-team-2.jpg" alt="Tom Ford" width="264">
-                    <h3>Tom Ford</h3>
+                    <h3 class="subtitle">Tom Ford</h3>
                     <p class="text-main">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-card">
                     <img src="./images/img-team-3.jpg" alt="Camila Garcia" width="264">
-                    <h3>Camila Garcia</h3>
+                    <h3 class="subtitle">Camila Garcia</h3>
                     <p class="text-main">Marketing</p>
                 </li>
-                <li>
+                <li class="team-card">
                     <img src="./images/img-team-4.jpg" alt="Daniel Wilson" width="264">
-                    <h3>Daniel Wilson</h3>
+                    <h3 class="subtitle">Daniel Wilson</h3>
                     <p class="text-main">UI Designer</p>
                 </li>
             </ul>
@@ -101,32 +101,32 @@
             <ul>
                 <li>
                     <img src="./images/portfolio-1.jpg" alt="Banking App" width="360">
-                    <h3>Banking App</h3>
+                    <h3 class="subtitle">Banking App</h3>
                     <p class="text-main">App</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-2.jpg" alt="Cashless Payment" width="360">
-                    <h3>Cashless Payment</h3>
+                    <h3 class="subtitle">Cashless Payment</h3>
                     <p class="text-main">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-3.jpg" alt="Meditation App" width="360">
-                    <h3>Meditation App</h3>
+                    <h3 class="subtitle">Meditation App</h3>
                     <p class="text-main">App</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio-4.jpg" alt="" width="360">
-                    <h3>Taxi Service</h3>
+                    <img src="./images/portfolio-4.jpg" alt="Taxi Service" width="360">
+                    <h3 class="subtitle">Taxi Service</h3>
                     <p class="text-main">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio-5.jpg" alt="" width="360">
-                    <h3>Screen Illustrations</h3>
+                    <img src="./images/portfolio-5.jpg" alt="Screen Illustrations" width="360">
+                    <h3 class="subtitle">Screen Illustrations</h3>
                     <p class="text-main">Design</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio-6.jpg" alt="" width="360">
-                    <h3>Online Courses</h3>
+                    <img src="./images/portfolio-6.jpg" alt="Online Courses" width="360">
+                    <h3 class="subtitle">Online Courses</h3>
                     <p class="text-main">Marketing</p>
                 </li>
             </ul>
