--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="./index.html" class="logotipe logotipe-footer"><span class="logotipe-unic">Web</span>Studio</a>
+    <footer class="footer">
+        <a href="./index.html" class="logotipe">Web<span class="logotipe-unic-footer">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.</p>
     </footer>
